# libakerror

./: CMakeLists.txt  README.md  akerror.pc.in
cmake/: akerror.cmake.in
include/: akerror.h
src/: error.c
tests/: err_catch.c  err_cleanup.c  err_trace.c
